--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-   "name": "maomaono1/phptest",
+   "name": "weizy/test",
    "type": "library",
    "description": "This is the PHP port of Hamcrest Matchers",
    "keywords": ["test"],
