--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
    "name": "weizy/test",
    "version": "1.0.0",
    "require": {
-        "monolog/monolog": "1.0.*"
+        "monolog/monolog": "1.0.*",
+		"laravel/tinker": "^1.0"
     }
 }
